# game-repository

./: .gitignore  README.md
docker/: docker-compose.yml
docker/localstack/: init-aws.sh
docker/wiremock/mappings/: steam_page1.json  steam_page2.json  steam_page3.json
lambdas/ddb_import/: PR_NOTES.md
lambdas/ddb_import/src/: game_import_service.py  ports.py
lambdas/ddb_import/src/adapters/: aws_param_store.py  ddb_import.py  dynamodb_repo.py  steam_api.py  steam_http_client.py
lambdas/ddb_import/tests/: test_game_import_service.py
lambdas/ddb_import/tests/adapters/: test_aws_param_store.py  test_dynamodb_repo.py  (+2 more)
lambdas/ddb_stream_publish/: ddb_stream_publish.py  pyproject.toml
lambdas/ddb_stream_publish/tests/: test_ddb_stream_publish.py
services/ddb_import/: pyproject.toml
services/ddb_import/src/: ddb_import.py  game_import_service.py  ports.py  service.py
services/ddb_import/src/adapters/: ddb_import.py  dynamodb_repo.py  steam_api.py  steam_http_client.py
services/ddb_import/src/ddb_import.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ddb_import/src/domain/: game.py
services/ddb_import/tests/: conftest.py  test_service.py
services/ddb_import/tests/adapters/: test_dynamodb_repo.py  test_steam_api.py  test_steam_http_client.py
services/ddb_import/tests/domain/: test_game.py
terraform/: backend.tf  main.tf  terraform.tfvars  variables.tf  versions.tf
terraform/files/: ddb_export.py
terraform/modules/dynamodb_table/: main.tf  outputs.tf  variables.tf
terraform/modules/sns_topic/: main.tf  outputs.tf  variables.tf
