[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddb-stream-publish"
version = "0.1.0"
description = "Lambda that reads new-item events from the DynamoDB stream and publishes them to SNS"
requires-python = ">=3.12"
# boto3 is provided by the Lambda Python 3.12 runtime — no runtime dependencies needed
dependencies = []

[project.optional-dependencies]
dev = [
    "boto3>=1.34",
    "boto3-stubs[sns]>=1.34",
    "pytest>=8",
    "pytest-mock>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]   # lets pytest resolve ddb_stream_publish the same way Lambda does

