[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ddb-import"
version = "0.1.0"
description = "Lambda job that imports Steam games into the Games DynamoDB table"
requires-python = ">=3.12"
# boto3 is provided by the Lambda Python 3.12 runtime — no runtime dependencies needed
dependencies = []

[project.optional-dependencies]
dev = [
    "boto3>=1.34",
    "boto3-stubs[dynamodb]>=1.34",
    "pytest>=8",
    "pytest-mock>=3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]   # lets pytest resolve imports the same way Lambda does

[tool.setuptools.packages.find]
where = ["src"]

